--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,89 +1,82 @@
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.gms.google-services' // Apply the plugin here
+    id 'com.google.gms.google-services' // Firebase plugin
 }
 
 android {
     namespace "com.alakdb.resumewriter"
     compileSdk 34
-    
+
     defaultConfig {
         applicationId "com.alakdb.resumewriter"
         minSdk 21
         targetSdk 34
         versionCode 6
         versionName "1.5"
+
+        // API base URL
         buildConfigField "String", "API_BASE_URL", "\"https://resume-writer-api.onrender.com/\""
+
+        // APP_SECRET_KEY from env file
+        def secretKey = System.getenv("APP_SECRET_KEY") ?: "your-secret-key-change-in-production"
+        buildConfigField "String", "APP_SECRET_KEY", "\"${secretKey}\""
     }
 
     buildFeatures {
         buildConfig true
-        viewBinding true // Enable view binding
+        viewBinding true
     }
-    
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            buildConfigField "String", "APP_SECRET_KEY", "\"${System.getenv("APP_SECRET_KEY") ?: "dev-secret"}\""
+        }
     }
-    
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
 
 dependencies {
+    // AndroidX
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0' // Removed duplicate
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
-    // UI + Lifecycle (needed for AppCompatActivity, ViewModel, LiveData, etc.)
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-ktx:1.8.2'
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
+    implementation 'androidx.webkit:webkit:1.8.0'
 
-    // Billing (use latest stable versions)
+    // Billing
     implementation 'com.android.billingclient:billing:6.2.0'
     implementation 'com.android.billingclient:billing-ktx:6.2.0'
 
-    // Firebase (BoM ensures versions stay compatible)
+    // Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
-    
-    // Other Firebase dependencies
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
-    
-    // WebView compatibility (optional but recommended)
-    implementation 'androidx.webkit:webkit:1.8.0'
 
-     // Network
-    
-    implementation("com.google.code.gson:gson:2.10.1")
-    implementation"com.squareup.okhttp3:logging-interceptor:4.11.0"
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    implementation("com.squareup.retrofit2:retrofit:2.9.0")
-    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
-    
+    // Networking
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.google.code.gson:gson:2.10.1"
 
-
-    
-    // Coroutines
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3")
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1")
-    
-
+    // Coroutines (cleaned duplicates)
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
 }
-
-// Already applied at top, remove this duplicate
-// apply plugin: 'com.google.gms.google-services'
