--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
 
     // Networking
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
@@ -78,5 +79,6 @@ dependencies {
     // Coroutines (cleaned duplicates)
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
 }
