--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,6 @@ dependencies {
     // Coroutines (cleaned duplicates)
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
 }
