--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:requestLegacyExternalStorage="true"
         android:hardwareAccelerated="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:icon="@mipmap/ic_launcher"
@@ -52,6 +53,8 @@
         <activity
             android:name=".UserRegistrationActivity"
             android:exported="true" />
+        
 
+    
     </application>
 </manifest>
