--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,15 @@
         </activity>
 
         <activity
+    android:name=".NetworkTestActivity"
+    android:exported="true">
+    <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+    </activity>
+
+        <activity
         android:name=".ResumeGenerationActivity"
         android:exported="true"
         android:label="Generate Resume"
