--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
+
+    // AndroidX
+    implementation 'androidx.core:core-ktx:1.12.0'
+    
 }
