--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,10 @@ android {
 
     // 🔥 Play Store compatibility: generate ABI splits AND universal APK
     splits {
-        abi {
-            enable true
-            reset()
-            include "arm64-v8a", "armeabi-v7a"
-            universalApk true   // creates universal APK for all devices
-        }
+    abi {
+        enable false
     }
+}
 
     buildFeatures {
         buildConfig true
