--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ android {
 dependencies {
 
     // ---------- ANDROIDX ----------
+    implementation 'com.facebook.android:facebook-android-sdk:16.3.0'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
