--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,13 @@ android {
 
 dependencies {
 
-    // ---------- ANDROIDX ----------
+    // Facebook Login SDK
     implementation 'com.facebook.android:facebook-android-sdk:16.3.0'
+
+    // Facebook Share SDK (REQUIRED FOR LikeView)
+    implementation 'com.facebook.android:facebook-share:16.3.0'
+    
+    // ---------- ANDROIDX ----------
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
